Fix hamburger menu on mobile

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -10,18 +10,20 @@
 
 /* Left navigation menu */
 
-nav.md-nav label {
-	font-size: 1rem;
-	font-weight: 400 !important;
-	color: var(--md-typeset-color) !important;
-	border-bottom: 1px dotted var(--md-accent-fg-color);
-	padding: 0 0 .1rem 0 !important;
-	margin: 0 0 .6rem 0;
-}
+@media screen and (min-width:60em) {
+	nav.md-nav label {
+		font-size: 1rem;
+		font-weight: 400 !important;
+		color: var(--md-typeset-color) !important;
+		border-bottom: 1px dotted var(--md-accent-fg-color);
+		padding: 0 0 .1rem 0 !important;
+		margin: 0 0 .6rem 0;
+	}
 
-nav.md-nav[data-md-level="0"] > ul > li > label {
-	font-size: 1.3rem;
-	font-weight: 300;
-	padding: 0 0 .4rem 0 !important;
-	margin: 0 .6rem .6rem .6rem;
+	nav.md-nav[data-md-level="0"] > ul > li > label {
+		font-size: 1.3rem;
+		font-weight: 300;
+		padding: 0 0 .4rem 0 !important;
+		margin: 0 .6rem .6rem .6rem;
+	}
 }
